# VTInstall

./: Cargo.toml  README.md
examples/hello_world/: hello_world.install
examples/hello_world/cmd/: run.json  run.sh
vtinstall/: Cargo.toml
vtinstall/parser/: Cargo.toml
vtinstall/parser/src/: calculator1.lalrpop  command.rs  instruction.rs  lib.rs  parser.lalrpop  script.rs  statement.rs
vtinstall/parser/src/script/: builder.rs  command.rs  instruction.rs  mod.rs  statement.rs  use_statement.rs
vtinstall/src/: main.rs
vtinstall/src/compiler/: errors.rs  mod.rs  script_writer.rs
vtinstall/src/interpreter/: mod.rs
