[package]
name = "vtinstall"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Voigt"]
description = "Tool for creating install scripts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
parser = { path = "parser"}
